--- a/Source/Test/Makefile
+++ b/Source/Test/Makefile
@@ -5,10 +5,10 @@ CXX = g++
 CXX_FLAGS = -std=c++11 -m64 
 
 ifeq ($(DEBUG),true)
-	CXX_FLAGS += -ggdb -O0
+	CXX_FLAGS += -g3 -O0
 	BUILD_TYPE = debug
 else ifeq ($(DEBUG),false)
-	CXX_FLAGS += -ggdb -O3
+	CXX_FLAGS += -g3 -O3
 	BUILD_TYPE = releaseSymbol
 else
 	CXX_FLAGS += -O3
@@ -17,18 +17,18 @@ endif
 
 # include paths
 INC_DIR = -I$(BUILD_DIR)/Include \
-		  -I$(BUILD_DIR)/Depend/http_parser \
-		  -I$(BUILD_DIR)/Depend/jsoncpp \
-		  -I$(BUILD_DIR)/Depend/openssl \
-		  -I$(BUILD_DIR)/Depend/lua/src \
-		  -I/usr/include/mysql \
+		-I$(BUILD_DIR)/Depend/http_parser \
+		-I$(BUILD_DIR)/Depend/jsoncpp \
+		-I$(BUILD_DIR)/Depend/openssl \
+		-I$(BUILD_DIR)/Depend/lua/src \
+		-I/usr/include/mysql \
 
 
 BIN = AntTest.bin
 SRCS = $(wildcard *.cpp)
 OBJS = $(SRCS:.cpp=.o)
 DEPS = $(SRCS:.cpp=.d)
-LIBS = -L$(BUILD_DIR)/Lib -lAntEngine -lmysqlclient -llua -lssl -lcrypto -lz -lpthread -ldl
+LIBS = -L$(BUILD_DIR)/Lib -lAntEngine -lmysqlclient -lhiredis -llua -lssl -lcrypto -lz -lpthread -ldl
 BIN := $(addprefix $(BUILD_DIR)/Bin/,$(BIN))
 
 OBJ_DIR = $(BUILD_DIR)/Bin/Temp/objs/$(BUILD_TYPE)/Test
